--- a/package.json
+++ b/package.json
@@ -13,17 +13,23 @@
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-toggle": "^1.1.2",
     "@radix-ui/react-toggle-group": "^1.1.2",
+    "@types/pg": "^8.11.11",
+    "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.6.0",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
+    "dotenv": "^16.4.7",
     "lucide-react": "^0.483.0",
     "next": "15.2.3",
     "next-cloudinary": "^6.16.0",
     "next-themes": "^0.4.6",
+    "pg": "^8.14.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
